--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 npm-debug.log
 yarn-error.log
 
+/src/environments/environment.ts
+/src/environments/environment.development.ts
+
 # IDEs and editors
 .idea/
 .project
